Fix p tag overlapses the sidebar, fix bottom navigation in developer page

--- a/sass/_typo.sass
+++ b/sass/_typo.sass
@@ -1,3 +1,6 @@
+p
+	word-break: break-word
+
 .redoc-wrap[_ngcontent-c0]
 	font-family: $font-regular
 
